maintenance update fixed compat raspi os bookworm added systemd service launcher fixed unstable connection/link to irrigation system (optimized delays)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,11 @@
+setuptools==45.0.0
 Flask==0.10.1
-
-gevent
-greenlet
-
-Flask_SocketIO
+Flask_SocketIO==3.0.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
-python-engineio
-python-socketio
+python-engineio==3.14.2
+python-socketio==4.6.1
 six==1.9.0
 Werkzeug==0.14.1
 python-dateutil
